[gd_scene load_steps=2 format=3 uid="uid://bos3yfn3v2b7m"]

[ext_resource type="Script" uid="uid://cap3ifnj81ka" path="res://scripts/pause_screen.gd" id="1_gchx3"]

[node name="Pause Screen" type="CanvasLayer"]
script = ExtResource("1_gchx3")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.5
offset_top = -154.0
offset_right = 78.5
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/separation = 12

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="RestartButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="GoToTitleButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = " Go to Title  Screen "

[node name="ExitGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Exit Game"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GoToTitleButton" to="." method="_on_go_to_title_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
